--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </head>
   <body>
     <h1 id="title">🤖 BORED BOT 🤖</h1>
-    <h2 id="idea">Find something to do</h2>
+    <h2 id="idea">Are you bored right now?.. Click Me, I will give you idea.</h2>
 
     <button id="button-bot">
       <img src="bot.png" height="200" width="200" />
